[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 96.0
margin_top = 292.0
margin_right = 291.0
margin_bottom = 332.0
text = "salvar"

[node name="LineEdit" type="LineEdit" parent="Button"]
margin_left = 18.0
margin_top = 69.0
margin_right = 170.0
margin_bottom = 106.0

[node name="LineEdit2" type="LineEdit" parent="Button"]
margin_left = 18.0
margin_top = 122.0
margin_right = 170.0
margin_bottom = 158.0

[node name="Button2" type="Button" parent="."]
margin_left = 390.0
margin_top = 294.0
margin_right = 566.0
margin_bottom = 347.0
text = "numero"

[node name="Button3" type="Button" parent="."]
margin_left = 696.0
margin_top = 294.0
margin_right = 871.0
margin_bottom = 347.0
text = "nome"

[node name="Label" type="Label" parent="."]
margin_left = 389.0
margin_top = 366.0
margin_right = 612.0
margin_bottom = 424.0

[node name="Label3" type="Label" parent="."]
margin_left = 697.0
margin_top = 373.0
margin_right = 911.0
margin_bottom = 441.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
